Commintting the Voilation Timer

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-
+<!-- 
 
 <div class="navbar">
 
@@ -10,18 +10,10 @@
       <a mat-button >
         <mat-icon>home</mat-icon>
         Home</a>
-      <!-- <a mat-button routerLink="/contact">
-  <mat-icon>contact_mail</mat-icon>
-  Contact
-</a> -->
-
       <a mat-button routerLink="/contact">
         <mat-icon>contact_page</mat-icon>
         Contact
       </a>
-
-
-
 
       <a [routerLink]="'/signup'" mat-button aria-label="Example icon-button with heart icon">
         <mat-icon>person_add</mat-icon>
@@ -32,48 +24,4 @@
     </mat-toolbar>
   </header>
 
-
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- IF LOGGED IN NAVBAR FOR ADMIN-->
+</div> -->
